[gd_scene load_steps=3 format=3 uid="uid://bmxdlthmoupb0"]

[ext_resource type="Script" path="res://hud.gd" id="1_jx0wt"]
[ext_resource type="Script" path="res://level_select_button.gd" id="2_bqvqo"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_jx0wt")
max_starting_level = 10

[node name="score" type="Label" parent="."]
visible = false
offset_right = 56.0
offset_bottom = 23.0

[node name="level" type="Label" parent="."]
visible = false
offset_top = 32.0
offset_right = 40.0
offset_bottom = 55.0

[node name="depth" type="Label" parent="."]
visible = false
offset_top = 64.0
offset_right = 56.0
offset_bottom = 87.0

[node name="title" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -440.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 300
text = "Roots"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="start_button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_right = 60.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"
icon_alignment = 1

[node name="restart_button" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -15.5
offset_right = 44.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Try Again?"

[node name="game_over_text" type="Label" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -240.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="final_score" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -120.0
offset_right = 480.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_select" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 64.0
offset_right = 60.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 3
text = "Level: 1"
script = ExtResource("2_bqvqo")

[node name="pause_text" type="Label" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -240.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="restart_button" to="." method="_on_start_button_pressed"]
[connection signal="decrease_level" from="level_select" to="." method="_on_decrease_level"]
[connection signal="increase_level" from="level_select" to="." method="_on_increase_level"]
